implemented the current player and winner UI