@@ -1,18 +1,51 @@
 package game;
 
 import java.util.Arrays;
+import java.util.stream.Collectors;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+import java.io.IOException;
+
 
 public class GameState {
 
     private final Cell[] cells;
+    private final String currentPlayer;
+    private final String winner;
 
-    private GameState(Cell[] cells) {
+    private GameState(Cell[] cells, String currentPlayer, String winner) {
         this.cells = cells;
-    }
+        this.currentPlayer = currentPlayer;
+        this.winner = winner;
 
+    }
+    public static void generateTextFile(String filename, String content) {
+        try {
+            Files.write(Paths.get(filename), content.getBytes());
+            System.out.println("File created successfully: " + filename);
+        } catch (IOException e) {
+            System.err.println("Error creating the file: " + e.getMessage());
+        }
+    }
     public static GameState forGame(Game game) {
         Cell[] cells = getCells(game);
-        return new GameState(cells);
+        int currentPlayer = game.getPlayer().value;
+        int winner = game.getWinner() == null ? -1 : game.getWinner().value;
+
+        String currentPlayerString = switch (currentPlayer) {
+            case 0 -> "X";
+            case 1 -> "O";
+            default -> "-1";
+        };
+        
+        String winnerString = switch (winner) {
+            case 0 -> "X";
+            case 1 -> "O";
+            default -> "-1";
+        };
+        
+        generateTextFile("gamestate.txt", "Current player: " + currentPlayerString + "\nWinner: " + winnerString);
+        return new GameState(cells, currentPlayerString, winnerString);
     }
 
     public Cell[] getCells() {
@@ -25,9 +58,17 @@ public class GameState {
      */
     @Override
     public String toString() {
-        return """
-                { "cells": %s}
-                """.formatted(Arrays.toString(this.cells));
+        String cellsJson = Arrays.stream(this.cells)
+                              .map(Cell::toString)
+                              .collect(Collectors.joining(", ", "[", "]"));
+
+    return String.format("""
+            { 
+              "cells": %s, 
+              "currentPlayer": "%s", 
+              "winner": "%s" 
+            }
+            """, cellsJson, this.currentPlayer, this.winner.isEmpty() ? null : this.winner);
     }
 
     private static Cell[] getCells(Game game) {
